# ethzasl_apriltag

./: .gitignore  CMakeLists.txt  CMakeLists.txt_orig  FixParams.yaml  README.md  mainpage.dox  manifest.xml  rosdep.yaml
application/: CMakeLists.txt
application/AprilROSNode/: AprilROSNode.cpp  CMakeLists.txt  Params.cpp  april_interface.cpp  main.cpp
application/AprilTagCreator/: CMakeLists.txt
application/AprilTagFinder/: AprilTagFinder.cpp  AprilTagFinder.cpp~  CMakeLists.txt
application/CameraSimulator/: CMakeLists.txt
application/DLTCalibrator/: CMakeLists.txt
application/KEG/: CMakeLists.txt
application/SimpleAR/: CMakeLists.txt
cfg/: ethzasl_apriltagParams.cfg  roscpp_apriltagParams.cfg
include/: ImageHelper.h  OpenCVHelper.h  OpenCVHelper.h~
include/apriltag/: TagDetector.hpp  TagFamily.hpp  TagUtils.hpp
include/esm/: ESMHelper.hpp~  LICENSE
include/esm/osx/: ESMlibry.h
include/esm/unix64/: ESMlibry.h
include/ethzasl_apriltag/: Params.h  april_interface.h
include/roscpp_apriltag/: AprilROSNode.h  Params.h  april_interface.h
launch/: AprilROSNode.launch
src/roscpp_apriltag/cfg/: roscpp_apriltagConfig.py
